# console-app

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  test_basic.py  todo_app_spec.txt
.specify/memory/: constitution.md
history/prompts/002-todo-master-app/: 0001-architectural-plan-todo-master.plan.prompt.md  0002-task-generation-todo-master.tasks.prompt.md  0003-todo-master-mvp-implementation-phase-1-2.green.prompt.md
history/prompts/constitution/: 0001-create-initial-project-constitution.constitution.prompt.md
specs/002-todo-master-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-master-app/contracts/: storage-api.md
src/todo_master/: __init__.py  main.py
src/todo_master/models/: __init__.py  project.py  task.py
src/todo_master/services/: __init__.py  project_manager.py  task_manager.py
src/todo_master/storage/: __init__.py  auto_save.py  backup.py  base.py  json_store.py
src/todo_master/ui/: __init__.py  app.py  navigation.py  theme.py
src/todo_master/ui/dialogs/: __init__.py  input_dialog.py
src/todo_master/ui/screens/: __init__.py  base.py  calendar.py  projects.py  task_list.py
src/todo_master/ui/widgets/: __init__.py  base.py
src/todo_master/utils/: __init__.py  constants.py  date_utils.py  keybindings.py
tests/fixtures/: sample_settings.json  sample_tasks.json
